# lib_dzne_overload

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml
src/lib_dzne_overload/: __init__.py  __main__.py
src/lib_dzne_overload/tests/: test_1984.py
