[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0.0",
]

[project]
authors = [
    { email = "johannes-programming@mailfence.com", name = "Johannes" },
    { email = "johannes-programming@posteo.org", name = "Johannes" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []
description = "Library for overloading functions."
keywords = []
name = "lib_dzne_overload"
readme = "README.rst"
requires-python = ">=3.11"
version = "0.2.3"

[project.license]
file = "LICENSE.txt"

[project.urls]
Documentation = "https://pypi.org/project/lib_dzne_overload"
Download = "https://pypi.org/project/lib-dzne-overload/#files"
Source = "https://github.com/johannes-programming/lib_dzne_overload"
